Bug 1355097 - adjust asserts in Preferences::InitStaticMembers to account for Stylo; r=Manishearth